# arxivy

./: .gitignore  Makefile  README.md  arxivy.py  create_db.py  pyproject.toml  requirements.txt
app/: views.py
app/models/: comments.py
app/static/css/: style.css
app/templates/: index.html
twitter_ingest/: ingest.py  ingest_scrape.py  requirements.txt  schema.sql  scrape_arxiv.py
website/: Dockerfile  Makefile  Procfile  fly.toml  requirements.txt
website/app/: __init__.py  routes.py  views.py
website/app/static/css/: style.css
website/app/templates/: comments.html  index.html  sign_in.html  sign_up.html  twitter.html
