[tool.poetry]
name = "arxivy"
version = "0.1.0"
description = "Something around arxiv and LLM and people"
authors = ["Timothy Chen <tnachen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arxiv = "^1.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
